# ScenarioEngine

./: README.md  pyproject.toml
examples/: finance_retirement.py  python_breeding.py  solar_battery.py  water_storage.py
scenario_engine/: engine.py  exceptions.py  sampling.py  stats.py
tests/: test_engine_loop.py  test_failure_logic.py  test_sampling.py
